<resources>
    <string name="app_name">MyRssFeedApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="you_don_t_have_an_account_with_us">You Don\'t have an account with us?</string>
    <string name="create_account">Create account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_title">login</string>
    <string name="sign_in">Sign in</string>
    <string name="have_account">You have an account already?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="create_account_title">Create Account</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="news_for_you">News for you</string>
    <string name="settings_title">Settings</string>
    <string name="edit">edit</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="notifications">Notifications</string>
    <string name="profile_name">Profile name</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete Account</string>
    <string name="my_favorites">My Favorites</string>
    <string name="username">Username</string>
    <string name="our_services">Our Services</string>
    <string name="update">Update</string>
    <string name="update_name">Update Name</string>
    <string name="lastname">lastname</string>
    <string name="firstname">Firstname</string>
    <string name="update_text">Update</string>
    <string name="cancel">Cancel</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="published">Published:</string>
    <string name="author">author:</string>
    <string name="source">source:</string>
    <string name="url">url:</string>
    <string name="published_date">published date:</string>
    <string name="favorite">Favorite</string>
    <string name="new_password">New Password :</string>
    <string name="secret_code">secret Code :</string>
    <string name="fpEmail">Email :</string>
    <string name="secret_pin">Secret PIN</string>
    <string name="themes">Themes</string>
</resources>