<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/myYellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topView" />
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="38sp"
        android:text="@string/create_account_title"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_person"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="25dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:background="@drawable/corner_borders"
        android:layout_marginTop="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_person"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="25dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        android:background="@drawable/corner_borders"
        android:layout_marginTop="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="25dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        android:background="@drawable/corner_borders"
        android:layout_marginTop="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="25dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:background="@drawable/corner_borders"
        android:layout_marginTop="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/cPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="25dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:background="@drawable/corner_borders"
        android:layout_marginTop="10dp"
        android:autofillHints="" />
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/button_corners"
        app:layout_constraintTop_toBottomOf="@id/cPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="20dp"
        android:textStyle="bold"
        android:padding="12dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/youHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/haveAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/myYellow"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>