<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settingsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:text="@string/settings_title"
                android:textStyle="bold"
                android:layout_marginVertical="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginVertical="20dp">
                <TextView
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/profile_name"
                    android:textSize="18sp"
                    android:layout_weight="0.7"
                    />

                <TextView
                    android:id="@+id/edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.3"
                    android:text="@string/edit"
                    android:textAlignment="textEnd"
                    android:textColor="#827717"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:paddingVertical="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:text="@string/notifications"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/charcoal"/>

                <Switch
                    android:id="@+id/pushedNotification"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/my_subscriptions"
                    android:textSize="20sp"
                    android:layout_weight="0.97"
                    android:textColor="@color/charcoal"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_add"
                    android:layout_weight="0.03"
                    android:textAlignment="textEnd"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/subscriptionRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_corners"
                android:text="@string/sign_out"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:text="@string/delete_account"
                android:background="@drawable/delete_button"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>