<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/updateNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_name"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_marginVertical="20dp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updateNameTitle"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:padding="16dp"
        android:hint="@string/firstname"
        android:background="@drawable/corner_borders"
        />
    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstName"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/lastname"
        android:background="@drawable/corner_borders"
        />
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastName"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="40dp"
        android:weightSum="1">
        <Button
            android:id="@+id/update"
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:background="@drawable/button_corners"
            android:text="@string/update_text"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastName" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:background="@drawable/button_corners"
            android:text="@string/cancel"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/buttons"/>

</androidx.constraintlayout.widget.ConstraintLayout>