<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/fpemailTile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fpEmail"
        android:fontFamily="sans-serif"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/fpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/corner_borders"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:padding="16dp"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fpemailTile"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/fpSecretCodeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secret_code"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/fpEmail"/>

    <EditText
        android:id="@+id/fpSecretCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/corner_borders"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:inputType="numberPassword"
        android:padding="16dp"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fpSecretCodeTitle"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/fpPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/fpSecretCode"/>

    <EditText
        android:id="@+id/fpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/corner_borders"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:inputType="textPassword"
        android:padding="16dp"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fpPasswordTitle"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>