<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homePackage.ArticleFragment"
    >
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/myYellow">
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back_arrow"
            android:layout_marginStart="20dp"
            />
        <ImageView
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_favorite_empty"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/topBar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/articleImage"
                android:layout_width="match_parent"
                android:layout_height="230dp"/>
            <TextView
                android:id="@+id/articleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/charcoal"
                android:fontFamily="sans-serif"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/author"
                    android:textSize="15sp"
                    android:textStyle="italic"/>
                <TextView
                    android:id="@+id/articleAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/source"
                    android:textSize="15sp"
                    android:textStyle="italic"/>
                <TextView
                    android:id="@+id/articleSource"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
            <TextView
                android:id="@+id/articleContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/url"
                    android:textSize="15sp"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/articleURL"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingStart="10dp"
                    android:textColor="@color/brightBlue"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry,TextViewEdits,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/published_date"
                    android:textSize="15sp"
                    android:textStyle="italic"/>
                <TextView
                    android:id="@+id/articlePub_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>